--- a/JegyzoInfo/ClientApp/src/app/components/videos/videos.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/videos/videos.component.html
@@ -5,41 +5,20 @@
         Videótár
       </h1>
       <ngb-carousel #ngcarousel>
-        <ng-template ngbSlide>
+        <ng-template ngbSlide *ngFor="let video of vids">
           <div class="picsum-img-wrapper">
-            <iframe width="775" height="436" src="https://www.youtube.com/embed/fidzLZQyaJE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- <iframe width="775" height="436" src="https://www.youtube.com/embed/fidzLZQyaJE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+            <video [src]="video.videoURL" controls></video>
             <h4>
-              Dark Matter Particles: Gateway to The Dark Universe
+              {{ video.cim }}
             </h4>
           </div>
           <div class="carousel-caption">
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
           </div>
         </ng-template>
-        <ng-template ngbSlide>
-          <div class="picsum-img-wrapper">
-            <iframe width="775" height="436" src="https://www.youtube.com/embed/A0G7XKFVO8A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-          <h4>
-            ZŐD HÁTÉR SE KÖLL | Zögzös Program | Streamer Tutorialos VIDINYÓ | TUF Gaming GeForce RTX™ 3080 |
-          </h4>
-          <div class="carousel-caption">
-            <!-- <p>Consectetur tortor volutpat pretium.</p> -->
-          </div>
-        </ng-template>
-        <ng-template ngbSlide>
-          <div class="picsum-img-wrapper">
-            <iframe width="775" height="436" src="https://www.youtube.com/embed/a7WwrMgGTzo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-          <h4>
-            Can a Solid Glass Ball Stop a 50cal?
-          </h4>
-          <div class="carousel-caption">
-            <!-- <p>Consectetur tortor volutpat pretium.</p> -->
-          </div>
-        </ng-template>
       </ngb-carousel>
-      <div class="ctaWrap">
+      <div class="ctaWrap" *ngIf="buttonGotoFullos">
         <button class="defaultBlue" routerLink="/videos">
           Tovább a teljes videókhoz
         </button>
