--- a/JegyzoInfo/ClientApp/src/app/components/videos/videos.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/videos/videos.component.scss
@@ -35,6 +35,10 @@
       background-position: bottom;
       background-repeat: no-repeat;
     }
+    video{
+      width: 775px;
+      height: 436px;
+    }
     h1{
       text-transform: uppercase;
       margin-bottom: 55px;
