--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -196,3 +196,7 @@ a.arrorange{
 .mat-form-field-infix{
   width: 120px !important;
 }
+
+.mat-progress-spinner circle, .mat-spinner circle {
+  stroke: #3fb53f;
+}
