--- a/JegyzoInfo/ClientApp/src/app/app.component.html
+++ b/JegyzoInfo/ClientApp/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div class="spinnerWrap" *ngIf="spinnerCounter > 0">
+  <mat-spinner></mat-spinner>
+</div>
 <app-navigation></app-navigation>
   <router-outlet></router-outlet>
   <div style="position: absolute; opacity: 0; z-index: -200; width: 1px; height: 1px; overflow: hidden;">
