--- a/JegyzoInfo/ClientApp/src/app/components/document-sample/document-sample.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/document-sample/document-sample.component.html
@@ -2,9 +2,7 @@
   <div class="text">
     {{ nev }}
   </div>
-  <a class="downloadRect" href="#">
-    <a [href]="url">
-      <img src="/assets/img/download.svg" alt="" width="20" />
-    </a>
+  <a class="downloadRect" [href]="url">
+    <img src="/assets/img/download.svg" alt="" width="20" />
   </a>
 </div>
