--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -72,7 +72,7 @@
       KIEMELT TÉMÁINK
     </h1>
     <app-topics [folyamats]="folyamats"></app-topics>
-    <div class="buttonWrap" *ngIf="userService.loginHappened.value">
+    <div class="buttonWrap">
       <button class="hollow" routerLink="/tudastar">
         Tovább a tudástár teljes tartalmához
       </button>
