--- a/JegyzoInfo/ClientApp/src/app/pages/knowledge-base/knowledge-base.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/knowledge-base/knowledge-base.component.html
@@ -28,7 +28,7 @@
     </div>
     <app-topics [folyamats]="folyamats"></app-topics>
     <div class="buttonWrap">
-      <button class="orange" routerLink="/tudastar">
+      <button class="orange" (click)="clickMoreInfo()">
         Érdekel az előfizetés
       </button>
     </div>
