--- a/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
@@ -61,6 +61,9 @@ nav{
             background-position: 0 3px;
             padding-left: 15px;
             margin-right: 15px;
+            &.noDelim{
+              background: none;
+            }
           }
           &.loginText{
             margin-left: 0;
