--- a/JegyzoInfo/ClientApp/src/app/components/document-sample/document-sample.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/document-sample/document-sample.component.html
@@ -1,6 +1,8 @@
 <div class="documentSampleWrap">
   <div class="text">
-    {{ nev }}
+    <a [href]="url">
+      {{ nev }}
+    </a>
   </div>
   <a class="downloadRect" [href]="url">
     <img src="/assets/img/download.svg" alt="" width="20" />
