--- a/JegyzoInfo/ClientApp/src/app/app.component.html
+++ b/JegyzoInfo/ClientApp/src/app/app.component.html
@@ -9,5 +9,6 @@
     <img class="moodle" src="/assets/img/backArrow.svg" alt="" />
     <img class="moodle" src="/assets/img/greekColsBack.jpg" alt="" />
     <img class="moodle" src="/assets/img/housefeeling2.svg" alt="" />
+    <img class="moodle" src="/assets/img/checked.svg" alt="" />
   </div>
 <app-footer></app-footer>
