--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
@@ -30,7 +30,7 @@
         }
         .labelsWrap{
           span{
-            background-color: $darkBlue;
+            // background-color: $darkBlue;
           }
         }
       }
