--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -132,6 +132,7 @@ button, button:focus{
     padding: 4px 6px;
     margin-right: 10px;
     margin-bottom: 5px;
+    cursor: pointer;
   }
   &.green{
     span{
